--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./image/atualizar-banco-de-dados.png" alt="logo banco de dados">
             <h1>Massa de dados</h1>
         </div>
-        <span id="sobre-nos">Sobre nós</span>
+        <span id="sobre-nos">Sobre o site</span>
     </header>
 
     <div class="conteudo">
@@ -46,11 +46,25 @@
 
 
         <div class="gerador">
-
+            <div class="modal" id="modal">
+                <!-- <div class="top-modal">
+                    <h2 id="title"></h2>
+                </div>
+                <fieldset>
+                    <legend>Filtros</legend>
+                </fieldset>
+                
+                <div class="retorno-container">
+                    <textarea class="retorno" id="retorno-nome" disabled></textarea>
+                </div>
+                <div class="btn-copiar" id="btn-copiar-nome">
+                    Copiar
+                </div> -->
+            </div>
         </div>
 
 
-        <div class="modal-container" id="modal-nome">
+        <!-- <div class="modal-container" id="modal-nome">
             <div class="modal container">
                 <div class="fechar">
                     <button class="btn-fechar"
@@ -240,7 +254,7 @@
                     Copiar
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
