--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <li class="item-menu" id="geradorCpf">Gerador de CPF válido</li>
                     <li class="item-menu" id="geradorCnpj">Gerador de CNPJ válido</li>
                     <li class="item-menu" id="geradorTelefone">Gerador de telefone</li>
-                    <li class="item-menu">Gerador de sequência numérica</li>
-                    <li class="item-menu">Gerador de pessoa</li>
+                    <!-- <li class="item-menu">Gerador de sequência numérica</li>
+                    <li class="item-menu">Gerador de pessoa</li> -->
                 </ul>
             </nav>
         </div>
