--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <img src="./image/atualizar-banco-de-dados.png" alt="logo banco de dados">
             <h1>Massa de dados</h1>
         </div>
-        <span id="sobre-nos">Sobre o site</span>
+        <span id="sobre-site">Sobre o site</span>
     </header>
 
     <div class="conteudo">
@@ -43,10 +43,11 @@
             </nav>
         </div>
 
-
-        <div class="gerador">
+        <div class="gerador" id="gerador">
             <div class="modal" id="modal">
                 <div class="mensagem-inicial">Selecione um gerador</div> 
+            </div>
+            <div class="modal close" id="sobre-nos">
             </div>
         </div>
     </div>
