--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <li class="item-menu" id="geradorCpf">Gerador de CPF válido</li>
                     <li class="item-menu" id="geradorCnpj">Gerador de CNPJ válido</li>
                     <li class="item-menu" id="geradorTelefone">Gerador de telefone</li>
-                    <!-- <li class="item-menu">Gerador de sequência numérica</li>
+                    <!-- <li class="item-menu" id="geradorEndereco">Gerador de endereços</li>
+                    <li class="item-menu">Gerador de sequência numérica</li>
                     <li class="item-menu">Gerador de pessoa</li> -->
                 </ul>
             </nav>
@@ -57,6 +58,7 @@
     <script src="./js/cpf.js"></script>
     <script src="./js/cnpj.js"></script>
     <script src="./js/telefone.js"></script>
+    <script src="./js/cep.js" ></script>
 
 </body>
 
